# sclibble

./: .gitignore  GEMINI.md  Plan.md  README.md  design.md  last.py  notepad.md  pyproject.toml  read.py
sclibble/: cli.py  config.py  last.py  models.py  read.py  ui.py
sclibble.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test/: parseDB.js
test/sampleData/: Play Counts
tests/: test_config.py  test_last.py  test_models.py  test_read.py
tests/sampleData/: output.json
