[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sclibble"
version = "0.1.0"
description = "A lightweight, terminal-based application to scrobble music from a connected iPod device to Last.fm."
readme = "README.md"
authors = [
    { name = "Aditya Naithani", email = "aditya0602@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "requests>=2.31.0",
    "platformdirs>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "responses>=0.23.0"
]

[project.scripts]
sclibble = "sclibble.cli:app"
